--- a/catalog/templates/catalog/includes/inc_product.html
+++ b/catalog/templates/catalog/includes/inc_product.html
@@ -5,7 +5,7 @@
         </div>
         <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                <li>{{ object.description }}</li>
+                <li>{{ object.description | truncatechars:100 }}</li>
             </ul>
             <h3 class="card-title pricing-card-title">{{ object.price }}р</h3>
             <a href="{% url 'catalog:product' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
