added category display

--- a/catalog/templates/catalog/products.html
+++ b/catalog/templates/catalog/products.html
@@ -3,6 +3,7 @@
 {% load my_tags %}
 
 {% block content %}
+<a> Категория: {{ product.category }}</a>
 <div class="col-3">
     <div class="card mb-4 box-shadow">
         <img class="card-img-top"
