--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -12,6 +12,7 @@
         <nav class="ms-5">
             <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
             <a class="p-2 btn btn-outline-primary" href="/contacts">Контакты</a>
+            <a class="p-2 btn btn-outline-primary" href="/blog">Блог</a>
         </nav>
     </div>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
