--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -19,9 +19,12 @@
         <h3 class="display-4">{{ title }}</h3>
     </div>
     <div class="container">
-        {% block content %}
+        <a href="{% url 'catalog:create_product' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Создать продукт</a>
+        <div class="row">
+            {% block content %}
 
-        {% endblock %}
+            {% endblock %}
+        </div>
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-6 col-md">
