--- a/blog/templates/blog/blogrecord_form.html
+++ b/blog/templates/blog/blogrecord_form.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="col-12">
         <div class="row">
+            <div class="col-3"></div>
             <div class="col-6">
                 <div class="card">
                     <div class="card-body">
