--- a/blog/templates/blog/blogrecord_list.html
+++ b/blog/templates/blog/blogrecord_list.html
@@ -1,30 +1,47 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <a href="{% url 'blog:create' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Добавить запись</a>
+{% if user.is_authenticated %}
+<a href="{% url 'blog:create' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Добавить запись</a>
+{% endif %}
+<div class="col-12">
     <div class="row text-center mt-4">
         {% for object in object_list %}
-            <div class="col-3">
+            <div class="col-6">
                 <div class="card mb-4 box-shadow">
                     <div class="card-header">
                         <h2 class="my-0 font-weight-normal">{{ object.title }}</h2>
+                        <h6 class="my-0 font-weight-normal">{{ object.user }}</h6>
                     </div>
                     <div class="card-body">
                         <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                             <li>{{ object.body | truncatechars:100 }}</li>
                         </ul>
-                        <a href="{% url 'blog:view' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
-                        <a href="{% url 'blog:edit' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Редактировать</a>
-                        <a href="{% url 'blog:delete' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+
                     </div>
-                    {% if object.is_published %}
-                        <a href="{% url 'blog:change_status' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Деактивировать</a>
-                    {% else %}
-                        <a href="{% url 'blog:change_status' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Активировать</a>
-                    {% endif %}
+                    <div class="card-footer">
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'catalog:view_product' object.pk %}" type="button"
+                               class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
+                            <a href="{% url 'catalog:update_product' object.pk %}" type="button"
+                               class="btn btn-lg btn-block btn-outline-primary">Изменить</a>
+                            <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
+                               class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+                            {% if object.is_published %}
+                                <a href="{% url 'blog:change_status' object.pk %}" type="button"
+                                   class="btn btn btn-block btn-outline-primary">Деактивировать</a>
+                                {% else %}
+                                <a href="{% url 'blog:change_status' object.pk %}" type="button"
+                                   class="btn btn btn-block btn-outline-primary">Активировать</a>
+                            {% endif %}
+                        {% else %}
+                            <li> Нет прав для редактирования</li>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         {% endfor %}
     </div>
+</div>
 
 {% endblock %}
