--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -6,12 +6,10 @@
         {% if user.is_authenticated %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
+            <p class="text-right">Добро пожаловать: {{ user.email }}</p>
         {% else %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
         {% endif %}
     </nav>
-</div>
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h3 class="display-4">{{ title }}</h3>
 </div>
