added check user permissions in template

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,14 +1,21 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<a href="{% url 'catalog:create_product' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Создать продукт</a>
+{% if perms.catalog.add_product %}
+<a href="{% url 'catalog:create_product' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Создать
+    продукт</a>
+{% endif %}
 <div class="col-12">
     <div class="row text-center mt-4">
-    {% for object in object_list %}
+        {% for object in object_list %}
         <div class="col-6">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
+                    {% if not object.is_published %}
+                    <h2 class="my-0 text-muted">{{ object.name }}</h2>
+                    {% else %}
                     <h2 class="my-0 font-weight-normal">{{ object.name }}</h2>
+                    {% endif %}
                     <h6 class="my-0 font-weight-normal">{{ object.user }}</h6>
                 </div>
                 <div class="card-body">
@@ -19,18 +26,22 @@
 
                 </div>
                 <div class="card-footer">
-                        <a href="{% url 'catalog:view_product' object.pk %}" type="button"
-                           class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
-                        <a href="{% url 'catalog:update_product' object.pk %}" type="button"
-                           class="btn btn-lg btn-block btn-outline-primary">Изменить</a>
-                        <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
-                           class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+                    {% if perms.catalog.view_product %}
+                    <a href="{% url 'catalog:view_product' object.pk %}" type="button"
+                       class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
+                    {% endif %}
+                    {% if perms.catalog.change_product %}
+                    <a href="{% url 'catalog:update_product' object.pk %}" type="button"
+                       class="btn btn-lg btn-block btn-outline-primary">Изменить</a>
+                    {% endif %}
+                    {% if perms.catalog.delete_product %}
+                    <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
+                       class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
-</div>
-
-
 {% endblock %}
