changed btn style

--- a/blog/templates/blog/blogrecord_confirm_delete.html
+++ b/blog/templates/blog/blogrecord_confirm_delete.html
@@ -10,7 +10,7 @@
                             {% csrf_token %}
                             <p>Удалить запись "{{ object.title }}"?</p>
                             <button type="submit" class="btn btn-success">Подтвердить?</button>
-                            <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
+                            <a href="{% url 'blog:list_post' %}" class="btn btn-warning">Отмена</a>
                         </form>
                     </div>
                 </div>
