--- a/blog/templates/blog/blogrecord_detail.html
+++ b/blog/templates/blog/blogrecord_detail.html
@@ -1,11 +1,11 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<h1> Запись {{object.slug}}</h1>
-<div class="col-6">
+<h1> {{object.title}}</h1>
+<div class="col-12">
     <div class="card">
         <div class="card-header">
-
+            {{ object.slug }}
         </div>
         <div class="card-body">
             <img class="card-img-top"
@@ -22,3 +22,22 @@
 </div>
 
 {% endblock %}
+
+<h4> Категория: {{ object.category }}</h4>
+    <div class="col-6">
+        <div class="card mb-4 box-shadow">
+            <div class="card-header">
+                {{ object.name }}
+                {{ Version.is_active }}
+
+            </div>
+            <img class="card-img-top"
+
+                 alt="Card image cap">
+            <div class="card-body">
+                <a> </a>
+            </div>
+        </div>
+    </div>
+    <a> {{ object.description }}</a>
+    <h3> {{ object.price }} ₽ </h3>
