--- a/blog/templates/blog/blogrecord_form.html
+++ b/blog/templates/blog/blogrecord_form.html
@@ -10,7 +10,7 @@
                         <form method="post" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form.as_p }}
-                            <button type="submit" class="btn btn-success">
+                            <button type="submit" class="btn btn-outline-success">
                                 {% if object %}
                                     Сохранить
                                 {% else %}
