--- a/blog/templates/blog/blogrecord_list.html
+++ b/blog/templates/blog/blogrecord_list.html
@@ -21,23 +21,23 @@
                 <div class="card-footer">
                     {% if perms.blog.view_blogrecord %}
                     <a href="{% url 'blog:view_post' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
+                       class="btn btn-outline-info">Смотреть</a>
                     {% endif %}
                     {% if perms.blog.change_blogrecord %}
                     <a href="{% url 'blog:update_post' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Изменить</a>
+                       class="btn btn-outline-info">Изменить</a>
                     {% endif %}
                     {% if perms.blog.delete_blogrecord %}
                     <a href="{% url 'blog:delete_post' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+                       class="btn btn-outline-danger">Удалить</a>
                     {% endif %}
                     {% if user.is_staff %}
                         {% if object.is_published %}
                         <a href="{% url 'blog:change_status' object.pk %}" type="button"
-                           class="btn btn btn-block btn-outline-primary">Деактивировать</a>
+                           class="btn btn-outline-primary">Деактивировать</a>
                         {% else %}
                         <a href="{% url 'blog:change_status' object.pk %}" type="button"
-                           class="btn btn btn-block btn-outline-primary">Активировать</a>
+                           class="btn btn-outline-primary">Активировать</a>
                         {% endif %}
                     {% endif %}
                 </div>
