--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -1,15 +1,15 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h1 class="my-0 mr-md-auto font-weight-normal">Skystore - это маленький уютный онлайн-магазин. 🤗</h1>
+    <h1 class="my-0 mr-md-auto font-weight-normal">Wrum-store - это маленький онлайн-магазин. </h1>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="/blog">Блог</a>
+        <a class="p-2 btn btn-outline-dark" href="/">Каталог</a>
+        <a class="p-2 btn btn-outline-dark" href="/blog">Блог</a>
         {% if user.is_authenticated %}
-            <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
-            <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
+            <a class="p-2 btn btn-outline-dark" href="{% url 'users:profile' %}">Профиль</a>
+            <a class="p-2 btn btn-outline-dark" href="{% url 'users:logout' %}">Выйти</a>
             <p class="text-right">Добро пожаловать: {{ user.email }}</p>
         {% else %}
-            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
-            <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+            <a class="p-2 btn btn-outline-dark" href="{% url 'users:login' %}">Войти</a>
+            <a class="p-2 btn btn-outline-dark" href="{% url 'users:register' %}">Регистрация</a>
         {% endif %}
     </nav>
 </div>
