--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -28,15 +28,15 @@
                 <div class="card-footer">
                     {% if perms.catalog.view_product %}
                     <a href="{% url 'catalog:view_product' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Смотреть</a>
+                       class="btn btn-outline-info">Смотреть</a>
                     {% endif %}
                     {% if perms.catalog.change_product %}
                     <a href="{% url 'catalog:update_product' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Изменить</a>
+                       class="btn btn-outline-info">Изменить</a>
                     {% endif %}
                     {% if perms.catalog.delete_product %}
                     <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
-                       class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
+                       class="btn btn-outline-danger">Удалить</a>
                     {% endif %}
                 </div>
             </div>
