--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -3,7 +3,8 @@
 {% load my_tags %}
 
 {% block content %}
-<h4> Категория: {{ object.category }}</h4>
+<div class="col-12">
+    <h4> Категория: {{ object.category }}</h4>
     <div class="col-6">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
@@ -21,5 +22,6 @@
     </div>
     <a> {{ object.description }}</a>
     <h3> {{ object.price }} ₽ </h3>
-    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+    <button type="button" class="btn btn-lg btn-outline-dark" disabled>Купить</button>
+</div>
 {% endblock %}
