--- a/users/templates/users/verification.html
+++ b/users/templates/users/verification.html
@@ -17,7 +17,7 @@
                   <input type="text" name="verification_code" class="form-control" id="verification_code" required>
               </div>
               <div class="card-footer">
-                  <button type="submit" class="btn btn-success">Подтвердить</button>
+                  <button type="submit" class="btn btn-outline-success">Подтвердить</button>
               </div>
             </div>
           </div>
