--- a/blog/templates/blog/blogrecord_confirm_delete.html
+++ b/blog/templates/blog/blogrecord_confirm_delete.html
@@ -1,5 +1,6 @@
 {% extends 'catalog/base.html' %}
 
+<title>Удаление записи</title>
 {% block content %}
     <div class="col-12">
         <div class="row">
