--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,5 +1,8 @@
 {% extends 'catalog/base.html' %}
 
+{% block title %}
+<title>Добавление продукта</title>
+{% endblock %}
 {% block content %}
 <div class="col-12">
     <form class="row pt-4" method="post" enctype="multipart/form-data">
