--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -25,15 +25,9 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header"></div>
-                <div class="card-body">
-                    <img class="card-img-top"
-                     src="{{ user.avatar | mediapath }}"
-                     alt="Card image cap">
-                </div>
-                <div class="card-footer"></div>
-            </div>
+            <img class="img-fluid img-thumbnail rounded float-right"
+             src="{{ user.avatar | mediapath }}"
+             alt="Card image cap">
         </div>
     </form>
 </div>
