--- a/blog/templates/blog/blogrecord_detail.html
+++ b/blog/templates/blog/blogrecord_detail.html
@@ -1,5 +1,7 @@
 {% extends 'catalog/base.html' %}
-
+{% block title %}
+<title>{{ object.title }}</title>
+{% endblock %}
 {% block content %}
 <h1> {{object.title}}</h1>
 <div class="col-12">
