--- a/blog/templates/blog/blogrecord_list.html
+++ b/blog/templates/blog/blogrecord_list.html
@@ -1,5 +1,8 @@
 {% extends 'catalog/base.html' %}
 
+{% block title %}
+<title>Блог</title>
+{% endblock %}
 {% block content %}
 {% if perms.blog.add_blogrecord %}
 <a href="{% url 'blog:create_post' %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Добавить запись</a>
