--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skystore</title>
+    {% block title %}
+    {% endblock %}
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -30,7 +31,7 @@
                 </div>
                 <div class="col-12 col-md">
                     SkyStore
-                    <small class="d-block mb-3 text-muted">&copy; 2023</small>
+                    <small class="d-block mb-3 text-muted">&copy; 2023-2024</small>
                 </div>
             </div>
         </footer>
