--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -1,7 +1,9 @@
 {% extends 'catalog/base.html' %}
 
+{% block title %}
+<title>Контакты</title>
+{% endblock %}
 {% block content %}
-
 <div class="col-12">
     <div class="row pt-4 text-start">
         <div class="col-6">
@@ -30,7 +32,7 @@
                     <h4 class="my-0 font-weight-normal">Свяжитесь с нами</h4>
                 </div>
                 <div class="card-body">
-                    <form method="post" action="" class="form-floating">
+                    <form method="post" class="form-floating">
                         {% csrf_token %}
                         <div class="mb-3">
                             <label for="name">Имя</label>
@@ -48,8 +50,9 @@
                             <textarea type="text" name="message" class="form-control" id="message"
                                       placeholder="Сообщение" required></textarea>
                         </div>
+                        <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить</button>
                     </form>
-                    <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить</button>
+
                 </div>
             </div>
         </div>
