--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -1,7 +1,8 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h1 class="my-0 mr-md-auto font-weight-normal">Wrum-store - это маленький онлайн-магазин. </h1>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-dark" href="/">Каталог</a>
+        <a class="p-2 btn btn-outline-dark" href="{% url 'catalog:home' %}">Главная</a>
+        <a class="p-2 btn btn-outline-dark" href="{% url 'catalog:list_product' %}">Каталог</a>
         <a class="p-2 btn btn-outline-dark" href="/blog">Блог</a>
         {% if user.is_authenticated %}
             <a class="p-2 btn btn-outline-dark" href="{% url 'users:profile' %}">Профиль</a>
