--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -1,5 +1,8 @@
 {% extends 'catalog/base.html' %}
 
+{% block title %}
+<title>Подтверждение удаления</title>
+{% endblock %}
 {% block content %}
     <div class="col-12">
         <div class="row">
