--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-success">
+                    <button type="submit"  class="p-2 btn btn-outline-success">
                         Войти
                     </button>
                 </div>
