--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
                 <div class="col-12 col-md">
-                    SkyStore
+                    WrumStore
                     <small class="d-block mb-3 text-muted">&copy; 2023-2024</small>
                 </div>
             </div>
