--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h1 class="my-0 mr-md-auto font-weight-normal">Wrum-store - это маленький онлайн-магазин. </h1>
+    <h1 class="my-0 mr-md-auto font-weight-normal">WrumStore - это маленький онлайн-магазин. </h1>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-dark" href="{% url 'catalog:home' %}">Главная</a>
         <a class="p-2 btn btn-outline-dark" href="{% url 'catalog:list_product' %}">Каталог</a>
